--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,15 +27,11 @@
             <div class="footer">
               <div class="contact">
                 <p>
-                  Your Name<br />
-                  What You Are<br />
-                  your@email.com
-                </p>
-              </div>
-              <div class="contact">
-                <p>
-                  <a href="http://github.com/yourusername/">github.com/yourusername</a><br />
-                  <a href="http://twitter.com/yourusername/">twitter.com/yourusername</a><br />
+					Matthew Henry<br />
+                  Software Engineering undergrad at UQ in Brisbane, Australia<br />
+				<a href="mailto:me@mhenr.com">Email</a>&nbsp;
+                <a href="http://github.com/mhenr18/">GitHub</a>&nbsp;  
+                <a href="http://twitter.com/mhenr18/">Twitter</a>
                 </p>
               </div>
             </div>
