Changed design & site name

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
         <div class="container">
           <div class="site">
             <div class="header">
-              <h1 class="title"><a href="/">{{ site.name }}</a></h1>
+              <h1 class="title">{{ site.name }}</h1>
               <a class="extra" href="/">home</a>
             </div>
 
@@ -28,9 +28,9 @@
               <div class="contact">
                 <p>
 					Matthew Henry<br />
-                  Software Engineering undergrad at UQ in Brisbane, Australia<br />
-				<a href="mailto:me@mhenr.com">Email</a>&nbsp;
-                <a href="http://github.com/mhenr18/">GitHub</a>&nbsp;  
+                  Software Engineering undergrad at UQ in Brisbane, Australia.<br />
+				  <a href="mailto:me@mhenr.com">me@mhenr.com</a> &bull;
+                <a href="http://github.com/mhenr18/">GitHub</a> &bull;
                 <a href="http://twitter.com/mhenr18/">Twitter</a>
                 </p>
               </div>
